--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -1373,7 +1373,7 @@ font-weight:normal;
 }
 
 QDialog#SendCoinsDialog .QScrollArea#scrollArea .QWidget#scrollAreaWidgetContents { /* Send To Widget */
-background-color:#2f3241;
+background-color:#131722;
 }
 
 
