--- a/src/qt/forms/sendcoinsdialog.ui
+++ b/src/qt/forms/sendcoinsdialog.ui
@@ -72,6 +72,12 @@
           <property name="spacing">
            <number>0</number>
           </property>
+          <property name="leftMargin">
+           <number>9</number>
+          </property>
+          <property name="rightMargin">
+           <number>9</number>
+          </property>
           <item>
            <widget class="QLabel" name="labelOverviewHeaderRight">
             <property name="minimumSize">
@@ -117,13 +123,13 @@
          <number>0</number>
         </property>
         <property name="leftMargin">
-         <number>0</number>
+         <number>9</number>
         </property>
         <property name="topMargin">
          <number>0</number>
         </property>
         <property name="rightMargin">
-         <number>0</number>
+         <number>9</number>
         </property>
         <property name="bottomMargin">
          <number>0</number>
@@ -180,7 +186,7 @@
                <number>0</number>
               </property>
               <property name="bottomMargin">
-               <number>0</number>
+               <number>9</number>
               </property>
               <item>
                <layout class="QHBoxLayout" name="horizontalLayoutCoinControl1">
@@ -879,8 +885,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>974</width>
-             <height>147</height>
+             <width>956</width>
+             <height>138</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,1">
