--- a/src/qt/forms/multisigdialog.ui
+++ b/src/qt/forms/multisigdialog.ui
@@ -443,7 +443,7 @@ Please be patient after clicking import.</string>
                 </sizepolicy>
                </property>
                <property name="toolTip">
-                <string>Add destinations to send XLR to</string>
+                <string>Add destinations to send XCRC to</string>
                </property>
                <property name="text">
                 <string>Add &amp;Destination</string>
