--- a/src/qt/forms/optionsdialog.ui
+++ b/src/qt/forms/optionsdialog.ui
@@ -135,10 +135,10 @@
          <item>
           <widget class="QLabel" name="percentage_label">
            <property name="toolTip">
-            <string>Percentage of incoming XLR which get automatically converted to zXLR via Zerocoin Protocol (min: 10%)</string>
+            <string>Percentage of incoming XCRC which get automatically converted to zXCRC via Zerocoin Protocol (min: 10%)</string>
            </property>
            <property name="text">
-            <string>Percentage of autominted zXLR</string>
+            <string>Percentage of autominted zXCRC</string>
            </property>
           </widget>
          </item>
@@ -168,10 +168,10 @@
             </size>
            </property>
            <property name="toolTip">
-            <string>Wait with automatic conversion to Zerocoin until enough XLR for this denomination is available</string>
+            <string>Wait with automatic conversion to Zerocoin until enough XCRC for this denomination is available</string>
            </property>
            <property name="text">
-            <string>Preferred Automint zXLR Denomination</string>
+            <string>Preferred Automint zXCRC Denomination</string>
            </property>
           </widget>
          </item>
@@ -184,7 +184,7 @@
             </size>
            </property>
            <property name="toolTip">
-            <string>Wait with automatic conversion to Zerocoin until enough XLR for this denomination is available</string>
+            <string>Wait with automatic conversion to Zerocoin until enough XCRC for this denomination is available</string>
            </property>
            <property name="maxVisibleItems">
             <number>9</number>
