--- a/src/qt/forms/privacydialog.ui
+++ b/src/qt/forms/privacydialog.ui
@@ -52,13 +52,13 @@
           </font>
          </property>
          <property name="toolTip">
-          <string>XLR which were anonymized via Zerocin Protocol</string>
+          <string>XCRC which were anonymized via Zerocin Protocol</string>
          </property>
          <property name="autoFillBackground">
           <bool>true</bool>
          </property>
          <property name="text">
-          <string>ZeroCRyptoCrowd (zXLR)</string>
+          <string>ZeroCRyptoCrowd (zXCRC)</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
@@ -145,7 +145,7 @@
                   </size>
                  </property>
                  <property name="toolTip">
-                  <string>Enter an amount of XLR to convert to zXLR</string>
+                  <string>Enter an amount of XCRC to convert to zXCRC</string>
                  </property>
                  <property name="text">
                   <string>Mint Zerocoin</string>
@@ -171,7 +171,7 @@
                <item>
                 <widget class="QLabel" name="labelzXLR_2">
                  <property name="text">
-                  <string>zXLR</string>
+                  <string>zXCRC</string>
                  </property>
                 </widget>
                </item>
@@ -191,10 +191,10 @@
                <item>
                 <widget class="QLabel" name="labelzXLRAmountValue">
                  <property name="toolTip">
-                  <string>Enter an amount of XLR to convert to zXLR</string>
+                  <string>Enter an amount of XCRC to convert to zXCRC</string>
                  </property>
                  <property name="text">
-                  <string>0.000 000 00 XLR</string>
+                  <string>0.000 000 00 XCRC</string>
                  </property>
                  <property name="alignment">
                   <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -370,7 +370,7 @@
                     <enum>Qt::ActionsContextMenu</enum>
                    </property>
                    <property name="text">
-                    <string notr="true">0.00 XLR</string>
+                    <string notr="true">0.00 XCRC</string>
                    </property>
                    <property name="textInteractionFlags">
                     <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
@@ -474,16 +474,16 @@
                 <number>0</number>
                </property>
                <item>
-                <widget class="QPushButton" name="pushButtonZXLRControl">
+                <widget class="QPushButton" name="pushButtonZXCRCControl">
                  <property name="text">
-                  <string>zXLR Control</string>
+                  <string>zXCRC Control</string>
                  </property>
                 </widget>
                </item>
                <item>
                 <widget class="QLabel" name="labelzXLRSelected">
                  <property name="text">
-                  <string>zXLR Selected:</string>
+                  <string>zXCRC Selected:</string>
                  </property>
                 </widget>
                </item>
@@ -560,7 +560,7 @@
                <item>
                 <widget class="QLabel" name="labelzXLRBalanceText">
                  <property name="toolTip">
-                  <string>Available (mature and spendable) zXLR for spending</string>
+                  <string>Available (mature and spendable) zXCRC for spending</string>
                  </property>
                  <property name="text">
                   <string>Available Balance:</string>
@@ -579,12 +579,12 @@
                   </font>
                  </property>
                  <property name="toolTip">
-                  <string>Available (mature and spendable) zXLR for spending
+                  <string>Available (mature and spendable) zXCRC for spending
 
-zXLR are mature when they have more than 20 confirmations AND more than 2 mints of the same denomination after them were minted</string>
+zXCRC are mature when they have more than 20 confirmations AND more than 2 mints of the same denomination after them were minted</string>
                  </property>
                  <property name="text">
-                  <string>0 zXLR</string>
+                  <string>0 zXCRC</string>
                  </property>
                  <property name="alignment">
                   <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -800,7 +800,7 @@ zXLR are mature when they have more than 20 confirmations AND more than 2 mints 
                   </size>
                  </property>
                  <property name="text">
-                  <string>zXLR</string>
+                  <string>zXCRC</string>
                  </property>
                 </widget>
                </item>
@@ -960,7 +960,7 @@ zXLR are mature when they have more than 20 confirmations AND more than 2 mints 
                   </font>
                  </property>
                  <property name="toolTip">
-                  <string>Total Balance including unconfirmed and immature zXLR</string>
+                  <string>Total Balance including unconfirmed and immature zXCRC</string>
                  </property>
                  <property name="text">
                   <string>Total Zerocoin  Balance:</string>
@@ -998,10 +998,10 @@ zXLR are mature when they have more than 20 confirmations AND more than 2 mints 
                   </font>
                  </property>
                  <property name="toolTip">
-                  <string>Total Balance including unconfirmed and immature zXLR</string>
+                  <string>Total Balance including unconfirmed and immature zXCRC</string>
                  </property>
                  <property name="text">
-                  <string>0 zXLR</string>
+                  <string>0 zXCRC</string>
                  </property>
                  <property name="alignment">
                   <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -1576,7 +1576,7 @@ Immature: confirmed, but less than 2 mints of the same denomination after it was
          <enum>Qt::ActionsContextMenu</enum>
         </property>
         <property name="text">
-         <string notr="true">0.000 000 00 XLR</string>
+         <string notr="true">0.000 000 00 XCRC</string>
         </property>
         <property name="textInteractionFlags">
          <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
@@ -1650,7 +1650,7 @@ Immature: confirmed, but less than 2 mints of the same denomination after it was
            <enum>Qt::ActionsContextMenu</enum>
           </property>
           <property name="text">
-           <string notr="true">0.00 XLR</string>
+           <string notr="true">0.00 XCRC</string>
           </property>
           <property name="textInteractionFlags">
            <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
@@ -1847,7 +1847,7 @@ Immature: confirmed, but less than 2 mints of the same denomination after it was
          <enum>Qt::ActionsContextMenu</enum>
         </property>
         <property name="text">
-         <string notr="true">0.000 000 00 XLR</string>
+         <string notr="true">0.000 000 00 XCRC</string>
         </property>
         <property name="textInteractionFlags">
          <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
