--- a/src/qt/forms/tradingdialog.ui
+++ b/src/qt/forms/tradingdialog.ui
@@ -442,7 +442,7 @@
       </rect>
      </property>
      <property name="text">
-      <string>Buy XLR</string>
+      <string>Buy XCRC</string>
      </property>
      <property name="icon">
       <iconset resource="../cryptocrowd.qrc">
@@ -512,7 +512,7 @@
       </rect>
      </property>
      <property name="text">
-      <string>XLR</string>
+      <string>XCRC</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_5">
@@ -1704,7 +1704,7 @@
       </rect>
      </property>
      <property name="text">
-      <string>XLR</string>
+      <string>XCRC</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="UnitsInputXLR">
@@ -1751,7 +1751,7 @@
       </rect>
      </property>
      <property name="text">
-      <string>Sell XLR</string>
+      <string>Sell XCRC</string>
      </property>
      <property name="icon">
       <iconset resource="../cryptocrowd">
@@ -1777,7 +1777,7 @@
          </font>
         </property>
         <property name="text">
-         <string>XLR Available:</string>
+         <string>XCRC Available:</string>
         </property>
        </widget>
       </item>
@@ -2221,7 +2221,7 @@
          </font>
         </property>
         <property name="text">
-         <string>XLR</string>
+         <string>XCRC</string>
         </property>
        </widget>
       </item>
@@ -2762,7 +2762,7 @@
       </font>
      </property>
      <property name="text">
-      <string>XLR Balance:</string>
+      <string>XCRC Balance:</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_12">
@@ -2813,7 +2813,7 @@
       </font>
      </property>
      <property name="text">
-      <string>XLR Available:</string>
+      <string>XCRC Available:</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_14">
@@ -2832,7 +2832,7 @@
       </font>
      </property>
      <property name="text">
-      <string>XLR Pending:</string>
+      <string>XCRC Pending:</string>
      </property>
     </widget>
     <widget class="QLabel" name="XLRPendingLabel">
@@ -2928,7 +2928,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Bittrex XLR Deposit Address:</string>
+      <string>Bittrex XCRC Deposit Address:</string>
      </property>
     </widget>
     <widget class="QPushButton" name="GenDepositBTN">
