--- a/src/qt/forms/zxlrcontroldialog.ui
+++ b/src/qt/forms/zxlrcontroldialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ZXLRControlDialog</class>
- <widget class="QDialog" name="ZXLRControlDialog">
+ <class>ZXCRCControlDialog</class>
+ <widget class="QDialog" name="ZXCRCControlDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Select zXLR to Spend</string>
+   <string>Select zXCRC to Spend</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
@@ -40,14 +40,14 @@
       </widget>
      </item>
      <item row="1" column="0">
-      <widget class="QLabel" name="labelZXLR">
+      <widget class="QLabel" name="labelZXCRC">
        <property name="text">
-        <string>zXLR</string>
+        <string>zXCRC</string>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLabel" name="labelZXLR_int">
+      <widget class="QLabel" name="labelZXCRC_int">
        <property name="text">
         <string>0</string>
        </property>
@@ -96,7 +96,7 @@
        </column>
        <column>
         <property name="text">
-         <string notr="true">zXLR Public ID</string>
+         <string notr="true">zXCRC Public ID</string>
         </property>
        </column>
        <column>
@@ -130,7 +130,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>ZXLRControlDialog</receiver>
+   <receiver>ZXCRCControlDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -146,7 +146,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>ZXLRControlDialog</receiver>
+   <receiver>ZXCRCControlDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
